src/objects/ID_Card__c.object
<CustomObject>
    <fields>
        <fullName>Photo__c</fullName>
        <description>Filename of the image</description>
        <label>Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Code__c</fullName>
        <formula>CASE(Position__c, 
&quot;*CNV DATA* NOT DEFINED&quot;,&quot;-&quot;, 
&quot;SHAREHOLDER&quot;,&quot;C&quot;, 
&quot;Shareholder&quot;,&quot;C&quot;, 
&quot;EMPLOYEE&quot;,&quot;E&quot;, 
&quot;Employee&quot;,&quot;E&quot;, 
&quot;INDEPENDENT CONSULTANT&quot;,&quot;I&quot;, 
&quot;INDEPENDENT CONSULTANT/BROKER&quot;,&quot;I&quot;, 
&quot;Independent Consultant/Broker&quot;,&quot;I&quot;, 
&quot;BROKER&quot;,&quot;I&quot;, 
&quot;MANAGER&quot;,&quot;M&quot;, 
&quot;Manager&quot;,&quot;M&quot;, 
&quot;NATIONAL DIRECTOR&quot;,&quot;N&quot;, 
&quot;Director&quot;,&quot;N&quot;, 
&quot;OUTSIDE SALES&quot;,&quot;O&quot;, 
&quot;PARTNER&quot;,&quot;P&quot;, 
&quot;Partner&quot;,&quot;P&quot;, 
&quot;QUALIFIED TICKETING AGENT&quot;,&quot;Q&quot;, 
&quot;REGIONAL DIRECTOR&quot;,&quot;R&quot;, 
&quot;OWNER&quot;,&quot;S&quot;, 
&quot;Sole Owner&quot;,&quot;S&quot;, 
&quot;PRESIDENT&quot;,&quot;T&quot;, 
&quot;SPOUSE&quot;,&quot;U&quot;, 
&quot;RETIRED EMPLOYEE&quot;,&quot;V&quot;, 
&quot;SPOUSE OF RETIRED EMPLOYEE&quot;,&quot;W&quot;, 
&quot;OTHER&quot;,&quot;X&quot;, 
&quot;SECRETARY GENERAL&quot;,&quot;Z&quot;, 
&quot; &quot;)</formula>
        <label>Position Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <label>Profit Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_From_AIMS__c</fullName>
        <description>Time stamp on when the id card was received from AIMS</description>
        <label>Confirmed in Production on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ID Cards</relationshipLabel>
        <relationshipName>ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_From_Replace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal From Replace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_AIMS_on__c</fullName>
        <description>Time stamp on when the id card was sent to AIMS</description>
        <label>Sent to Print on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Agency_Month__c</fullName>
        <label>Start Month in the Agency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Agency_Year__c</fullName>
        <label>Start Year in the Agency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Industry__c</fullName>
        <label>Start Year in the Industry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_ID_Card__c</fullName>
        <label>Type of ID Card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passenger</fullName>
                </value>
                <value>
                    <fullName>TIDS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VER_Number__c</fullName>
        <label>VER Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From_Date__c</fullName>
        <label>Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_Date__c</fullName>
        <label>Valid To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WebStar_ID__c</fullName>
        <externalId>true</externalId>
        <label>WebStar ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WebStar_P00_Key__c</fullName>
        <description>Primary Key assigned to Persons in WebStar. Used as junction key between US ID Card and related Contact</description>
        <externalId>true</externalId>
        <inlineHelpText>Primary Key assigned to Persons in WebStar. Used as junction key between US ID Card and related Contact</inlineHelpText>
        <label>WebStar P00 Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ID Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ID_Card_Application__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Start_Date_Agency_Month__c</columns>
        <columns>Start_Date_Agency_Year__c</columns>
        <columns>Start_Date_Industry__c</columns>
        <columns>Agency_IATA_Code__c</columns>
        <columns>Name_on_ID_Card__c</columns>
        <columns>Nature_of_ID_Card__c</columns>
        <columns>Card_Status__c</columns>
        <columns>Photo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Valid_To_Date__c</columns>
        <columns>MustSyncWithAIMS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_ID_Cards</fullName>
        <columns>NAME</columns>
        <columns>Agency_IATA_Code__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>VER_Number__c</columns>
        <columns>Json_Is_Active__c</columns>
        <columns>Valid_To_Date__c</columns>
        <columns>Card_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agency_Name__c</field>
            <operation>startsWith</operation>
            <value>SATO,SCHEDULED</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ID_Card__c.AIMS</value>
        </filters>
        <filters>
            <field>Json_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Inactive ID Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Must_Sync</fullName>
        <columns>NAME</columns>
        <columns>Related_Contact__c</columns>
        <columns>CIN__c</columns>
        <columns>Photo__c</columns>
        <columns>Card_Status__c</columns>
        <columns>Missing_Information__c</columns>
        <columns>Nature_of_ID_Card__c</columns>
        <columns>Valid_To_Date__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Agency_IATA_Code__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Card_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>MustSyncWithAIMS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sent_to_AIMS_on__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Photo__c</field>
            <operation>contains</operation>
            <value>NULL</value>
        </filters>
        <label>Photo Issue</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Must_Sync1</fullName>
        <columns>MustSyncWithAIMS__c</columns>
        <columns>NAME</columns>
        <columns>Related_Contact__c</columns>
        <columns>CIN__c</columns>
        <columns>IDCard_Key_Account__c</columns>
        <columns>Photo__c</columns>
        <columns>Card_Status__c</columns>
        <columns>Is_Expedite__c</columns>
        <columns>Missing_Information__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Valid_To_Date__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Agency_IATA_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Card_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>MustSyncWithAIMS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sent_to_AIMS_on__c</field>
            <operation>equals</operation>
        </filters>
        <label>Must Sync</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rejected_by_G_D</fullName>
        <columns>MustSyncWithAIMS__c</columns>
        <columns>NAME</columns>
        <columns>Related_Contact__c</columns>
        <columns>Card_Status__c</columns>
        <columns>Is_Expedite__c</columns>
        <columns>Photo__c</columns>
        <columns>Missing_Information__c</columns>
        <columns>CIN__c</columns>
        <columns>Sent_to_AIMS_on__c</columns>
        <columns>Valid_To_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Card_Status__c</field>
            <operation>equals</operation>
            <value>ERROR Rejected by G&amp;D</value>
        </filters>
        <label>Rejected by G&amp;D</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>VALID_ID_Cards</fullName>
        <columns>NAME</columns>
        <columns>Is_Active_Card__c</columns>
        <columns>Card_Status__c</columns>
        <columns>ID_Card_Application__c</columns>
        <columns>Type_of_ID_Card__c</columns>
        <columns>Nature_of_ID_Card__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active_Card__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>VALID ID Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>XX_GDP_Products_Account_View_BLANK</fullName>
        <columns>NAME</columns>
        <columns>Card_Status__c</columns>
        <columns>Json_Is_Active__c</columns>
        <columns>Is_Active_Card__c</columns>
        <columns>Valid_To_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GDP_Products_Account_View__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Card_Status__c</field>
            <operation>equals</operation>
            <value>Preapproved,Sent ID Card,Valid ID Card,ID Card Pending/In Progress</value>
        </filters>
        <label>XX-GDP Products - Account View = BLANK</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IDC-{000000000}</displayFormat>
        <label>ID Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Cards</pluralLabel>
    <recordTypes>
        <fullName>AIMS</fullName>
        <active>true</active>
        <label>AIMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>WebStar</fullName>
        <active>true</active>
        <label>WebStar</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IDCard_DontSaveIfSenttoAIMS</fullName>
        <active>false</active>
        <description>Dont allow the user to modify if the card is already sent to AIMS</description>
        <errorConditionFormula>AND(PRIORVALUE(MustSyncWithAIMS__c) == true, NOT(CONTAINS($Profile.Name ,&apos;System Administrator&apos;) ) ,NOT(CONTAINS($Profile.Name , &apos;idcard portal profile&apos; )))</errorConditionFormula>
        <errorMessage>Card has been already sent to AIMS. It can not be modified anymore.</errorMessage>
    </validationRules>
</CustomObject>